# interview-eval

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  config.yaml  hello.py  interview.py  main.py  pyproject.toml  questions.yaml  test.py  utils.py
docs/: advanced.md
examples/configs/: cafe_parttime.yaml  math_problem_bad_solving.yaml  math_problem_solving.yaml  persona.yaml
experiments/: .gitignore  README.md  dataset.py  interview.py  interview.sh  interview_math.py  interview_math.sh  interview_stem.py  interview_stem.sh  interview_test_math.py  main.py  pyproject.toml  test.sh  testcase_1.csv  testcase_2.csv
experiments/math_reasoning/: gsmk_dataloader.py  instruct.py  math_dataloader.py  prompt.py  state.py  state_temp.py  temp_data.py
experiments/src/: base_agent.py  base_grader.py  base_state.py  base_state_test.py  dialogue.py  metrics.py  metrics_level.py  metrics_temp.py  model.sh  model2.sh  models.py  models_test.py  post_processor.py  prompt.py  retriever.py  utils.py
experiments/stem/: atomic_gen.py  depth_qa_loader.py  depthqa_samples.jsonl  prompt.py  state.py  temp_data.py
experiments/train/: .gitignore  README.md  config.yaml
interview_eval/: custom_interview.py  custom_interview_experimental.py  decontaminate.py
interview_eval/swarm/: core.py  types.py
libs/: config_juyoung.yaml  main.py  test.py
libs/interview_eval/: Makefile  README.md  __init__.py  custom_interview.py  custom_interview_experimental.py  enhanced_config.yaml  enhanced_main.py  interview.py  main.py  pyproject.toml  test.py
swarm/: core.py  types.py
(+7 files in other folders)
